# cursor-extend

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: EXAMPLES.md
scripts/: generate_examples.py
src/mcp_extend/: __init__.py  generator.py  server.py
src/mcp_extend/templates/: README.md.jinja  __init__.py  basic_function.py.jinja  cursorrules_commands.jinja  discover_commands_instructions.jinja  file_operations.py.jinja  http_api.py.jinja  pyproject.toml.jinja  remember_command_instructions.jinja  shell.py.jinja  tool_guide_instructions.jinja
tests/: __init__.py  test_generator.py
