[project]
name = "cursor-extend"
version = "0.1.0"
description = "Extend Cursor with custom MCP tools - Cursor forgets, your project remembers"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Stelian Matei" }
]
license = { text = "MIT" }
keywords = ["cursor", "mcp", "fastmcp", "ai-tools", "cursor-ide", "project-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
cursor-extend = "mcp_extend.server:main"

[project.urls]
Homepage = "https://github.com/mazzucci/cursor-extend"
Documentation = "https://github.com/mazzucci/cursor-extend#readme"
Repository = "https://github.com/mazzucci/cursor-extend"
Issues = "https://github.com/mazzucci/cursor-extend/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_extend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]






